2012-05-19  Ryosuke Niwa  <rniwa@webkit.org>

        Build fix. Sometimes --suffixes isn't supplied.

        * Scripts/webkitpy/tool/servers/gardeningserver.py:
        (GardeningHTTPRequestHandler.rebaseline):
        (GardeningHTTPRequestHandler.optimizebaselines):

2012-05-19  Ryosuke Niwa  <rniwa@webkit.org>

        Add "Lion" -> "mac-lion" to the builder port map.

        * Scripts/webkitpy/layout_tests/port/builders.py:

2012-05-19  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r117675.
        http://trac.webkit.org/changeset/117675
        https://bugs.webkit.org/show_bug.cgi?id=86938

        Broke builds. You can't initialize members by members
        themselves (Requested by rniwa on #webkit).

        * DumpRenderTree/chromium/LayoutTestController.cpp:
        (LayoutTestController::numberOfPages):
        * DumpRenderTree/chromium/WebViewHost.cpp:
        (WebViewHost::printPage):

2012-05-18  Kausalya Madhusudhanan  <kmadhusu@chromium.org>

        [chromium] User overloaded printBegin() webkit API to support auto fit to page functionality.
        https://bugs.webkit.org/show_bug.cgi?id=86684

        Reviewed by Darin Fisher.

        * DumpRenderTree/chromium/LayoutTestController.cpp:
        (LayoutTestController::numberOfPages):
        * DumpRenderTree/chromium/WebViewHost.cpp:
        (WebViewHost::printPage):

2012-05-18  Raphael Kubo da Costa  <rakuco@webkit.org>

        [EFL][DRT] Make it possible to enable CSS Grid Layout.
        https://bugs.webkit.org/show_bug.cgi?id=86921

        Reviewed by Tony Chang.

        * DumpRenderTree/efl/DumpRenderTreeChrome.cpp:
        (DumpRenderTreeChrome::resetDefaultsToConsistentValues):
        * DumpRenderTree/efl/LayoutTestControllerEfl.cpp:
        (LayoutTestController::overridePreference):

2012-05-18  Dirk Pranke  <dpranke@chromium.org>

        scm.add() doesn't work properly with svn 1.7
        https://bugs.webkit.org/show_bug.cgi?id=86779
